Update test_1.ipynb readme

--- a/test_1.ipynb
+++ b/test_1.ipynb
@@ -21,7 +21,10 @@
         "\n",
         "**key improvements: new XML prompt**\n",
         "\n",
-        "*Last modification: Jinwei 3/12*\n"
+        "*Last modification: Jinwei 3/12*\n",
+        "\n",
+        "**Input:** `./dataset/kd.csv`, `./dataset/test.csv`, `./dataset/doc_embeddings.npy` (optional)\n",
+        "**Output:** `./dataset/test.csv` (overwritten)\n"
       ],
       "metadata": {
         "id": "INOL5Qk_vd4O"
