new embedding model

--- a/2025_Winter/test_1/test_1.ipynb
+++ b/2025_Winter/test_1/test_1.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/RedPlunder/CS450-Winter/blob/main/test_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "INOL5Qk_vd4O"
+      },
       "source": [
         "**RAG version: 1.0**\n",
         "\n",
@@ -26,43 +29,52 @@
         "**Input:** `./dataset/kd.csv`, `./dataset/test.csv`, `./dataset/doc_embeddings.npy` (optional)\n",
         "\n",
         "**Output:** `./dataset/test.csv` (overwritten)\n"
-      ],
-      "metadata": {
-        "id": "INOL5Qk_vd4O"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install faiss-cpu"
-      ],
+      "execution_count": 7,
       "metadata": {
-        "id": "0SCLSZFI4wIq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "0SCLSZFI4wIq",
         "outputId": "83c1e1ce-65d0-45ea-e9dc-27f22ce91a5d"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: faiss-cpu in /usr/local/lib/python3.11/dist-packages (1.10.0)\n",
             "Requirement already satisfied: numpy<3.0,>=1.25.0 in /usr/local/lib/python3.11/dist-packages (from faiss-cpu) (1.26.4)\n",
             "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from faiss-cpu) (24.2)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install faiss-cpu"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1,
       "metadata": {
         "id": "fRlgobfM27CF"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'transformers'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mopenai\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AutoTokenizer, AutoModel\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfaiss\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'transformers'"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import openai\n",
@@ -72,7 +84,7 @@
         "import os\n",
         "import torch\n",
         "import asyncio\n",
-        "from google.colab import userdata"
+        "# from google.colab import userdata"
       ]
     },
     {
@@ -88,16 +100,16 @@
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {
-        "id": "dotdZMsN27CH",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "dotdZMsN27CH",
         "outputId": "261c4ad3-c899-4975-df47-b680e41b5145"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Using device: cuda\n"
           ]
@@ -167,16 +179,16 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "id": "QY0cN1J927CI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "QY0cN1J927CI",
         "outputId": "4d27881a-61b7-4de5-f073-e1c24ad73947"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loading embeddings from file...\n",
             "FAISS indexing complete!\n"
@@ -235,17 +247,17 @@
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
-        "collapsed": true,
-        "id": "v0J84pui27CJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
+        "id": "v0J84pui27CJ",
         "outputId": "220a4202-afd8-4ea4-ec8a-8b9ae71112b2"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "embedding 0 / 40\n",
             "embedding 20 / 40\n",
@@ -577,6 +589,12 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -591,14 +609,8 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.19"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
-    },
-    "accelerator": "GPU"
+      "version": "3.12.0"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
